@@ -1,3 +1,10 @@
+2002-08-07  Anju P S <anju.premachandran@wipro.com>
+
+	*esdsample.c: (main): Fixed buffer-overflows.
+	*esddsp.c: (unlink), (sockaddr_mangle):Fixed buffer-overflows.
+	*esd.c: (safe_mksocketdir):Added code to check the return value 
+	of chmod() call.Fixes bug #89609
+
 2002-07-19  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* esdctl.c: (main): fix segfault when using -s (Debian)
